# 007

./: AGENTS.md  COMMANDS.md  README.md  main.py  pyproject.toml  requirements.txt  state.py
agent/: __main__.py  agent.py  auth.py  minimalist.tcss
agents/: agent.py  base.py  coding_agent.py
ai/: auth.py  manager.py  model.py
ai/providers/: factory.py  provider.py
ai/providers/copilot/: auth.py  model.py  model_manager.py  provider.py
app/: config.py
app/tui/: app.py  commands.py  mini.py  providers.py
tests/: __init__.py  test_agent.py  test_auth.py  test_copilot_oauth.py  test_mini_markdown.py  test_tui.py
