[project]
name = "agent"
version = "0.1.0"
description = "A coding agent with TUI using Textual and pydantic-ai."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual",
    "pydantic-ai",
    "ruff",
    "black"
]

[tool.ruff]
line-length = 100
extend-select = ["I"]

[tool.black]
line-length = 100

# No [tool.uv] block required - handled by 'requires-python' above
